--- a/package.json
+++ b/package.json
@@ -19,41 +19,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "@aparajita/capacitor-biometric-auth": "8.0.2",
-    "@capacitor/android": "6.1.1",
-    "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.1.1",
-    "@capacitor/haptics": "6.0.0",
-    "@capacitor/ios": "6.1.1",
-    "@capacitor/keyboard": "6.0.1",
-    "@capacitor/splash-screen": "6.0.1",
-    "@capacitor/status-bar": "6.0.0",
-    "@ionic/angular": "^8.0.0",
-    "ionicons": "^7.2.1",
+    "@angular/animations": "^19.2.15",
+    "@angular/common": "^19.2.15",
+    "@angular/compiler": "^19.2.15",
+    "@angular/core": "^19.2.15",
+    "@angular/forms": "^19.2.15",
+    "@angular/platform-browser": "^19.2.15",
+    "@angular/platform-browser-dynamic": "^19.2.15",
+    "@angular/router": "^19.2.15",
+    "@aparajita/capacitor-biometric-auth": "9.1.2",
+    "@capacitor/android": "7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/core": "7.4.4",
+    "@capacitor/haptics": "^7.0.2",
+    "@capacitor/ios": "7.4.4",
+    "@capacitor/keyboard": "^7.0.3",
+    "@capacitor/splash-screen": "^7.0.3",
+    "@capacitor/status-bar": "^7.0.3",
+    "@ionic/angular": "8.7.7",
+    "@tailwindcss/postcss": "^4.1.16",
+    "ionicons": "^7.4.0",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwind": "4.0.0",
+    "tailwindcss": "^4.1.16",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0",
-    "@angular-eslint/builder": "^18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.0",
-    "@angular-eslint/eslint-plugin-template": "^18.0.0",
-    "@angular-eslint/schematics": "^18.0.0",
-    "@angular-eslint/template-parser": "^18.0.0",
-    "@angular/cli": "^18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "6.1.1",
-    "@ionic/angular-toolkit": "^11.0.1",
+    "@angular-devkit/build-angular": "^19.2.18",
+    "@angular-eslint/builder": "19.8.1",
+    "@angular-eslint/eslint-plugin": "19.8.1",
+    "@angular-eslint/eslint-plugin-template": "19.8.1",
+    "@angular-eslint/schematics": "19.8.1",
+    "@angular-eslint/template-parser": "19.8.1",
+    "@angular/cli": "^19.2.18",
+    "@angular/compiler-cli": "^19.2.15",
+    "@angular/language-service": "^19.2.15",
+    "@capacitor/cli": "7.4.4",
+    "@ionic/angular-toolkit": "12.3.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -68,7 +72,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0"
+    "typescript": "~5.8.3"
   },
   "browserslist": [
     "Chrome >=79",
